manifest/objects/Melissa_Data_Personator_Result_Code__mdt.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <label>Long Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Melissa Data Personator Result Code</label>
    <pluralLabel>Melissa Data Personator Result Codes</pluralLabel>
</CustomObject>